--- a/tablewindow.ui
+++ b/tablewindow.ui
@@ -6,32 +6,35 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>491</width>
+    <height>362</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Table Dialog</string>
   </property>
   <widget class="QWidget" name="centralwidget" native="true">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>641</width>
-     <height>541</height>
+     <width>491</width>
+     <height>361</height>
     </rect>
    </property>
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>50</x>
+      <x>0</x>
       <y>10</y>
-      <width>591</width>
-      <height>521</height>
+      <width>491</width>
+      <height>351</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>0</number>
+     </property>
      <property name="sizeConstraint">
       <enum>QLayout::SetNoConstraint</enum>
      </property>
@@ -53,6 +56,12 @@
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <item>
         <widget class="QLabel" name="label_5">
+         <property name="minimumSize">
+          <size>
+           <width>60</width>
+           <height>0</height>
+          </size>
+         </property>
          <property name="text">
           <string>Radera</string>
          </property>
@@ -68,7 +77,7 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>170</width>
+           <width>180</width>
            <height>0</height>
           </size>
          </property>
@@ -79,7 +88,7 @@
           </size>
          </property>
          <property name="text">
-          <string>Namn</string>
+          <string>Kolumnnamn</string>
          </property>
         </widget>
        </item>
@@ -93,7 +102,7 @@
          </property>
          <property name="minimumSize">
           <size>
-           <width>100</width>
+           <width>87</width>
            <height>0</height>
           </size>
          </property>
@@ -109,53 +118,40 @@
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_3">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
-         </property>
+        <widget class="QLabel" name="label_7">
          <property name="minimumSize">
           <size>
-           <width>70</width>
+           <width>27</width>
            <height>0</height>
           </size>
          </property>
          <property name="text">
-          <string>Primary key</string>
+          <string>PK</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_4">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
-           <horstretch>0</horstretch>
-           <verstretch>0</verstretch>
-          </sizepolicy>
+         <property name="minimumSize">
+          <size>
+           <width>22</width>
+           <height>0</height>
+          </size>
          </property>
+         <property name="text">
+          <string>A I</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="label_3">
          <property name="text">
           <string>Unik</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QLabel" name="label_7">
-         <property name="text">
-          <string>A.I.</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="label_8">
-         <property name="text">
-          <string>Index</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_3">
+        <spacer name="horizontalSpacer_2">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
          </property>
